--- a/restfulapi-typeorm-uroanalisis/ormconfig.json
+++ b/restfulapi-typeorm-uroanalisis/ormconfig.json
@@ -1,10 +1,10 @@
 {
     "type": "mssql",
-    "host": "20141900230.database.windows.net",
+    "host": "unahhg1992.database.windows.net",
     "port": 1433, 
-    "username":"Usagi",
-    "password":"Ventajadicto_cadaver666",
-    "database":"Ingreso_auto",
+    "username":"hmaradiaga1992",
+    "password":"Maradiaga@1992",
+    "database":"ingreso_Vehiculos",
     "options":{
         "synchronize": true,
         "logging": false,
